[package]
name = "gpjc-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6"
actix-web = "4"
csv = "1.3.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
odbc = "0.17.0"
reqwest = { version = "0.11.22", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[features]
multiple-machines = []
